// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default website behavior 1`] = `
"{
  \\"output\\": {
    \\"WING_TEST_RUNNER_FUNCTION_ARNS\\": {
      \\"value\\": \\"[]\\"
    }
  },
  \\"resource\\": {
    \\"aws_cloudfront_distribution\\": {
      \\"Website_Distribution_5E840E42\\": {
        \\"default_cache_behavior\\": {
          \\"allowed_methods\\": [
            \\"GET\\",
            \\"HEAD\\"
          ],
          \\"cached_methods\\": [
            \\"GET\\",
            \\"HEAD\\"
          ],
          \\"compress\\": true,
          \\"default_ttl\\": 3600,
          \\"forwarded_values\\": {
            \\"cookies\\": {
              \\"forward\\": \\"none\\"
            },
            \\"query_string\\": false
          },
          \\"max_ttl\\": 86400,
          \\"min_ttl\\": 0,
          \\"target_origin_id\\": \\"s3Origin\\",
          \\"viewer_protocol_policy\\": \\"redirect-to-https\\"
        },
        \\"default_root_object\\": \\"index.html\\",
        \\"enabled\\": true,
        \\"origin\\": [
          {
            \\"domain_name\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket_regional_domain_name}\\",
            \\"origin_id\\": \\"s3Origin\\"
          }
        ],
        \\"price_class\\": \\"PriceClass_100\\",
        \\"restrictions\\": {
          \\"geo_restriction\\": {
            \\"locations\\": [],
            \\"restriction_type\\": \\"none\\"
          }
        },
        \\"viewer_certificate\\": {
          \\"cloudfront_default_certificate\\": true
        }
      }
    },
    \\"aws_s3_bucket\\": {
      \\"Website_WebsiteBucket_3C0321F0\\": {
        \\"bucket_prefix\\": \\"website-c80d509a-\\",
        \\"force_destroy\\": false
      }
    },
    \\"aws_s3_bucket_policy\\": {
      \\"Website_PublicPolicy_FF8AB959\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}\\",
        \\"depends_on\\": [
          \\"aws_s3_bucket_public_access_block.Website_PublicAccessBlock_C196C11D\\"
        ],
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Principal\\\\\\":\\\\\\"*\\\\\\",\\\\\\"Action\\\\\\":[\\\\\\"s3:GetObject\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.arn}/*\\\\\\"]}]}\\"
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"Website_PublicAccessBlock_C196C11D\\": {
        \\"block_public_acls\\": false,
        \\"block_public_policy\\": false,
        \\"bucket\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}\\",
        \\"ignore_public_acls\\": false,
        \\"restrict_public_buckets\\": false
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"Website_Encryption_5BBFE612\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    },
    \\"aws_s3_bucket_website_configuration\\": {
      \\"Website_BucketWebsiteConfiguration_58F891B4\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}\\",
        \\"index_document\\": {
          \\"suffix\\": \\"index.html\\"
        }
      }
    },
    \\"aws_s3_object\\": {
      \\"Website_File--bhtml_6ACC0793\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}\\",
        \\"content_type\\": \\"text/html; charset=utf-8\\",
        \\"depends_on\\": [
          \\"aws_s3_bucket.Website_WebsiteBucket_3C0321F0\\"
        ],
        \\"key\\": \\"/b.html\\",
        \\"source\\": \\"<source>\\"
      },
      \\"Website_File--inner-folder--ahtml_7D20A7EF\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}\\",
        \\"content_type\\": \\"text/html; charset=utf-8\\",
        \\"depends_on\\": [
          \\"aws_s3_bucket.Website_WebsiteBucket_3C0321F0\\"
        ],
        \\"key\\": \\"/inner-folder/a.html\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`default website behavior 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Website": {
                "attributes": {
                  "wing:resource:connections": [],
                },
                "children": {
                  "BucketWebsiteConfiguration": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "BucketWebsiteConfiguration",
                    "path": "root/Default/Website/BucketWebsiteConfiguration",
                  },
                  "Distribution": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Distribution",
                    "path": "root/Default/Website/Distribution",
                  },
                  "Encryption": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Encryption",
                    "path": "root/Default/Website/Encryption",
                  },
                  "File--b.html": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "File--b.html",
                    "path": "root/Default/Website/File--b.html",
                  },
                  "File--inner-folder--a.html": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "File--inner-folder--a.html",
                    "path": "root/Default/Website/File--inner-folder--a.html",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "PublicAccessBlock",
                    "path": "root/Default/Website/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "PublicPolicy",
                    "path": "root/Default/Website/PublicPolicy",
                  },
                  "WebsiteBucket": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "WebsiteBucket",
                    "path": "root/Default/Website/WebsiteBucket",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.314",
                },
                "display": {
                  "description": "A static website",
                  "title": "Website",
                },
                "id": "Website",
                "path": "root/Default/Website",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "attributes": {
                  "wing:resource:connections": [],
                },
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.314",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.314",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`website with add_json 1`] = `
"{
  \\"output\\": {
    \\"WING_TEST_RUNNER_FUNCTION_ARNS\\": {
      \\"value\\": \\"[]\\"
    }
  },
  \\"resource\\": {
    \\"aws_cloudfront_distribution\\": {
      \\"Website_Distribution_5E840E42\\": {
        \\"default_cache_behavior\\": {
          \\"allowed_methods\\": [
            \\"GET\\",
            \\"HEAD\\"
          ],
          \\"cached_methods\\": [
            \\"GET\\",
            \\"HEAD\\"
          ],
          \\"compress\\": true,
          \\"default_ttl\\": 3600,
          \\"forwarded_values\\": {
            \\"cookies\\": {
              \\"forward\\": \\"none\\"
            },
            \\"query_string\\": false
          },
          \\"max_ttl\\": 86400,
          \\"min_ttl\\": 0,
          \\"target_origin_id\\": \\"s3Origin\\",
          \\"viewer_protocol_policy\\": \\"redirect-to-https\\"
        },
        \\"default_root_object\\": \\"index.html\\",
        \\"enabled\\": true,
        \\"origin\\": [
          {
            \\"domain_name\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket_regional_domain_name}\\",
            \\"origin_id\\": \\"s3Origin\\"
          }
        ],
        \\"price_class\\": \\"PriceClass_100\\",
        \\"restrictions\\": {
          \\"geo_restriction\\": {
            \\"locations\\": [],
            \\"restriction_type\\": \\"none\\"
          }
        },
        \\"viewer_certificate\\": {
          \\"cloudfront_default_certificate\\": true
        }
      }
    },
    \\"aws_s3_bucket\\": {
      \\"Website_WebsiteBucket_3C0321F0\\": {
        \\"bucket_prefix\\": \\"website-c80d509a-\\",
        \\"force_destroy\\": false
      }
    },
    \\"aws_s3_bucket_policy\\": {
      \\"Website_PublicPolicy_FF8AB959\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}\\",
        \\"depends_on\\": [
          \\"aws_s3_bucket_public_access_block.Website_PublicAccessBlock_C196C11D\\"
        ],
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Principal\\\\\\":\\\\\\"*\\\\\\",\\\\\\"Action\\\\\\":[\\\\\\"s3:GetObject\\\\\\"],\\\\\\"Resource\\\\\\":[\\\\\\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.arn}/*\\\\\\"]}]}\\"
      }
    },
    \\"aws_s3_bucket_public_access_block\\": {
      \\"Website_PublicAccessBlock_C196C11D\\": {
        \\"block_public_acls\\": false,
        \\"block_public_policy\\": false,
        \\"bucket\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}\\",
        \\"ignore_public_acls\\": false,
        \\"restrict_public_buckets\\": false
      }
    },
    \\"aws_s3_bucket_server_side_encryption_configuration\\": {
      \\"Website_Encryption_5BBFE612\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}\\",
        \\"rule\\": [
          {
            \\"apply_server_side_encryption_by_default\\": {
              \\"sse_algorithm\\": \\"AES256\\"
            }
          }
        ]
      }
    },
    \\"aws_s3_bucket_website_configuration\\": {
      \\"Website_BucketWebsiteConfiguration_58F891B4\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}\\",
        \\"index_document\\": {
          \\"suffix\\": \\"index.html\\"
        }
      }
    },
    \\"aws_s3_object\\": {
      \\"Website_File--bhtml_6ACC0793\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}\\",
        \\"content_type\\": \\"text/html; charset=utf-8\\",
        \\"depends_on\\": [
          \\"aws_s3_bucket.Website_WebsiteBucket_3C0321F0\\"
        ],
        \\"key\\": \\"/b.html\\",
        \\"source\\": \\"<source>\\"
      },
      \\"Website_File--inner-folder--ahtml_7D20A7EF\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}\\",
        \\"content_type\\": \\"text/html; charset=utf-8\\",
        \\"depends_on\\": [
          \\"aws_s3_bucket.Website_WebsiteBucket_3C0321F0\\"
        ],
        \\"key\\": \\"/inner-folder/a.html\\",
        \\"source\\": \\"<source>\\"
      },
      \\"Website_File-configjson_1F1498B9\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.Website_WebsiteBucket_3C0321F0.bucket}\\",
        \\"content\\": \\"{\\\\\\"version\\\\\\":\\\\\\"8.31.0\\\\\\"}\\",
        \\"content_type\\": \\"application/json\\",
        \\"depends_on\\": [
          \\"aws_s3_bucket.Website_WebsiteBucket_3C0321F0\\"
        ],
        \\"key\\": \\"config.json\\"
      }
    }
  }
}"
`;

exports[`website with add_json 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Website": {
                "attributes": {
                  "wing:resource:connections": [],
                },
                "children": {
                  "BucketWebsiteConfiguration": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "BucketWebsiteConfiguration",
                    "path": "root/Default/Website/BucketWebsiteConfiguration",
                  },
                  "Distribution": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Distribution",
                    "path": "root/Default/Website/Distribution",
                  },
                  "Encryption": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Encryption",
                    "path": "root/Default/Website/Encryption",
                  },
                  "File--b.html": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "File--b.html",
                    "path": "root/Default/Website/File--b.html",
                  },
                  "File--inner-folder--a.html": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "File--inner-folder--a.html",
                    "path": "root/Default/Website/File--inner-folder--a.html",
                  },
                  "File-config.json": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "File-config.json",
                    "path": "root/Default/Website/File-config.json",
                  },
                  "PublicAccessBlock": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "PublicAccessBlock",
                    "path": "root/Default/Website/PublicAccessBlock",
                  },
                  "PublicPolicy": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "PublicPolicy",
                    "path": "root/Default/Website/PublicPolicy",
                  },
                  "WebsiteBucket": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "WebsiteBucket",
                    "path": "root/Default/Website/WebsiteBucket",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.314",
                },
                "display": {
                  "description": "A static website",
                  "title": "Website",
                },
                "id": "Website",
                "path": "root/Default/Website",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "attributes": {
                  "wing:resource:connections": [],
                },
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.314",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.314",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
